使用 MybatisPlus 生成代码

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: user-programming-profile
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
+    url: jdbc:mysql://localhost:3306/dy
     username: ${spring.datasource.username}
     password: ${spring.datasource.password}
   config:
@@ -11,3 +11,6 @@ spring:
 
 server:
   port: 8080
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
