--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ server:
   reactive:
     session:
       timeout: 86400
+  servlet:
+    context-path: /api
+
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
